# astarte-device-fdo-rust

./: .envrc  .gitattributes  .gitignore  .ignore  Cargo.lock.license  Cargo.toml  README.md  REUSE.toml  _typos.toml  justfile  pyproject.toml  release-plz.toml  rust-toolchain.toml
.cargo/: config.toml
astarte-device-fdo/: CHANGELOG.md  Cargo.toml  README.md
astarte-device-fdo/snapshots/: astarte_device_fdo__crypto__tpm__tests__signing_key_roundtrip.snap  astarte_device_fdo__crypto__tpm__tests__signing_key_roundtrip.snap.cbor  astarte_device_fdo__tests__use_macro.snap
astarte-device-fdo/src/: client.rs  di.rs  lib.rs  srv_info.rs  time.rs  to1.rs  to2.rs
astarte-device-fdo/src/client/: http.rs  mod.rs
astarte-device-fdo/src/client/http/: mod.rs  retry.rs
astarte-device-fdo/src/crypto/: kdf.rs  mod.rs  software.rs  tpm.rs
astarte-device-fdo/src/storage/: mod.rs
astarte-fdo-protocol/: CHANGELOG.md  Cargo.toml  README.md
astarte-fdo-protocol/snapshots/: astarte_fdo_protocol__error__tests__error_code_display.snap  astarte_fdo_protocol__v101__di__app_start__tests__app_start_any_cbor_roundtrip-2.snap.cbor  astarte_fdo_protocol__v101__di__app_start__tests__app_start_roundtrip.snap.cbor  astarte_fdo_protocol__v101__di__custom__tests__mfg_info_debug.snap  astarte_fdo_protocol__v101__di__done__tests__done_roundtrip.snap  astarte_fdo_protocol__v101__di__set_credentials__tests__set_credentials_roundtrip.snap  astarte_fdo_protocol__v101__di__set_credentials__tests__set_credentials_roundtrip.snap.cbor  astarte_fdo_protocol__v101__di__set_hmac__tests__set_hmac_roundtrip.snap  astarte_fdo_protocol__v101__di__set_hmac__tests__set_hmac_roundtrip.snap.cbor  astarte_fdo_protocol__v101__error__tests__error_message_display.snap  astarte_fdo_protocol__v101__error__tests__error_message_roundtrip.snap.cbor  astarte_fdo_protocol__v101__hash_hmac__tests__hash_debug.snap  astarte_fdo_protocol__v101__key_exchange__tests__xb_key_exchange_roundtrip.snap.cbor  astarte_fdo_protocol__v101__ownership_voucher__tests__ov_entry_payload_roundtrip.snap.cbor  astarte_fdo_protocol__v101__ownership_voucher__tests__ov_header_roundtrip.snap  astarte_fdo_protocol__v101__public_key__tests__public_key_debug-2.snap  astarte_fdo_protocol__v101__public_key__tests__public_key_debug-3.snap  astarte_fdo_protocol__v101__public_key__tests__public_key_debug-4.snap  astarte_fdo_protocol__v101__public_key__tests__public_key_roundtrip-2.snap  astarte_fdo_protocol__v101__public_key__tests__public_key_roundtrip-3.snap.cbor  astarte_fdo_protocol__v101__rendezvous_info__tests__rendezvous_info_roundtrip.snap.cbor  astarte_fdo_protocol__v101__rendezvous_info__tests__rv_variable_debug-10.snap  astarte_fdo_protocol__v101__rendezvous_info__tests__rv_variable_debug-11.snap  astarte_fdo_protocol__v101__rendezvous_info__tests__rv_variable_debug-14.snap  astarte_fdo_protocol__v101__rendezvous_info__tests__rv_variable_debug-16.snap  astarte_fdo_protocol__v101__rendezvous_info__tests__rv_variable_debug-3.snap  astarte_fdo_protocol__v101__rendezvous_info__tests__rv_variable_debug-4.snap  astarte_fdo_protocol__v101__rendezvous_info__tests__rv_variable_debug-5.snap  astarte_fdo_protocol__v101__rendezvous_info__tests__rv_variable_debug-6.snap  astarte_fdo_protocol__v101__rendezvous_info__tests__rv_variable_debug-7.snap  astarte_fdo_protocol__v101__rendezvous_info__tests__rv_variable_debug.snap  astarte_fdo_protocol__v101__rendezvous_info__tests__rv_variable_roundtrip-9.snap  astarte_fdo_protocol__v101__rv_to2_addr__tests__rv_to2_addr_roundtrip.snap.cbor  astarte_fdo_protocol__v101__service_info__tests__service_info_roundtrip-2.snap.cbor  astarte_fdo_protocol__v101__sign_info__tests__sig_info_roundtrip-3.snap.cbor  astarte_fdo_protocol__v101__sign_info__tests__sig_info_roundtrip-4.snap.cbor  astarte_fdo_protocol__v101__sign_info__tests__sig_info_roundtrip.snap.cbor  astarte_fdo_protocol__v101__tests__guid_display-2.snap  astarte_fdo_protocol__v101__tests__ip_roundtrip-2.snap.cbor  astarte_fdo_protocol__v101__tests__nonce_roundtrip.snap.cbor  (+19 more)
astarte-fdo-protocol/src/: error.rs  lib.rs  utils.rs
astarte-fdo-protocol/src/snapshots/: astarte_fdo_protocol__error__tests__error_code_display.snap  astarte_fdo_protocol__error__tests__error_display.snap  astarte_fdo_protocol__utils__tests__cbor_str_roundrtip.snap.cbor  astarte_fdo_protocol__utils__tests__hex_display-2.snap  astarte_fdo_protocol__utils__tests__one_or_more_roundrtip.snap  astarte_fdo_protocol__utils__tests__one_or_more_roundrtip.snap.cbor
astarte-fdo-protocol/src/v101/: device_credentials.rs  eat_signature.rs  error.rs  hash_hmac.rs  key_exchange.rs  mod.rs  ownership_voucher.rs  public_key.rs  rendezvous_info.rs  rv_to2_addr.rs  service_info.rs  sign_info.rs  x509.rs
astarte-fdo-protocol/src/v101/di/: app_start.rs  custom.rs  done.rs  mod.rs  set_credentials.rs  set_hmac.rs
astarte-fdo-protocol/src/v101/snapshots/: astarte_fdo_protocol__v101__error__tests__error_code_display.snap  astarte_fdo_protocol__v101__error__tests__error_message_display-3.snap  astarte_fdo_protocol__v101__error__tests__error_message_display-4.snap  astarte_fdo_protocol__v101__error__tests__error_message_roundtrip.snap  astarte_fdo_protocol__v101__error__tests__known code debug.snap  astarte_fdo_protocol__v101__hash_hmac__tests__hamac_roundtrip.snap.cbor  astarte_fdo_protocol__v101__hash_hmac__tests__hash_roundtrip.snap.cbor  astarte_fdo_protocol__v101__hash_hmac__tests__hash_type_roundtrip-3.snap  astarte_fdo_protocol__v101__key_exchange__tests__kex_suit_names_display.snap  astarte_fdo_protocol__v101__key_exchange__tests__xa_key_exchange_roundtrip.snap  astarte_fdo_protocol__v101__ownership_voucher__tests__ov_entry_roundtrip.snap.cbor  astarte_fdo_protocol__v101__ownership_voucher__tests__ov_header_roundtrip.snap.cbor  astarte_fdo_protocol__v101__ownership_voucher__tests__ownership_voucher_roundtrip.snap.cbor  astarte_fdo_protocol__v101__public_key__tests__public_key_debug.snap  astarte_fdo_protocol__v101__public_key__tests__public_key_roundtrip-2.snap.cbor  (+38 more)
e2e-test/: Cargo.toml
e2e-test/src/: main.rs
(+101 files in other folders)
