# This file is part of Astarte.
#
# Copyright 2025, 2026 SECO Mind Srl
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "3"
members = [
  "astarte-device-fdo",
  "astarte-fdo-protocol",
  "e2e-test",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
homepage = "https://astarte.cloud/"
license = "Apache-2.0"
repository = "https://github.com/astarte-platform/astarte-device-fdo-rust"
rust-version = "1.86"

[workspace.dependencies]
astarte-device-fdo = { version = "1.0.0", path = "./astarte-device-fdo" }
astarte-fdo-protocol = { version = "1.0.0", path = "./astarte-fdo-protocol" }
aws-lc-rs = "1.14.0"
ciborium = "0.2.1"
coset = "0.4.0"
futures-core = "0.3.31"
futures-util = "0.3.0"
http = "1.1.0"
once_cell = "1.16.0"
p256 = { version = "0.13.0", default-features = false }
pin-project-lite = "0.2.11"
rand = { version = "0.9.0", default-features = false }
rcgen = { version = "0.14.0", default-features = false, features = ["crypto", "pem", "aws_lc_rs"] }
reqwest = { version = "0.13.0", default-features = false, features = ["charset", "http2", "system-proxy", "rustls-no-provider"] }
rustc-hash = "2.1.0"
rustls = { version = "0.23.39", default-features = false, features = ["aws-lc-rs", "logging", "std", "prefer-post-quantum", "read_buf", "tls12"] }
serde = "1.0.220"
serde_bytes = "0.11.15"
tokio = { version = "1.48.0", default-features = false }
tokio-test = "0.4.0"
tracing = "0.1.35"
tss-esapi = "7.7.0"
url = "2.4.0"
x509-parser = "0.18.0"
zeroize = "1.8.0"

# Dev
cfg-if = "1.0.4"
clap = "4.5.53"
color-eyre = "0.6.5"
eyre = "0.6.12"
insta = "1.44.1"
mockito = "1.7.1"
pretty_assertions = "1.4.1"
rustls-platform-verifier = "0.6.2"
tracing-subscriber = "0.3.20"
uuid = "1.19.0"
webpki-roots = "1.0.4"
