# This file is part of Astarte.
#
# Copyright 2025, 2026 SECO Mind Srl
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "astarte-device-fdo"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
astarte-fdo-protocol.workspace = true
aws-lc-rs.workspace = true
ciborium.workspace = true
coset.workspace = true
nix = { workspace = true, features = ["ioctl"] }
rcgen = { workspace = true, default-features = false, features = ["crypto", "pem", "aws_lc_rs"] }
reqwest = { workspace = true, default-features = false, features = ["charset", "http2", "system-proxy", "rustls-tls-manual-roots-no-provider"] }
serde_bytes.workspace = true
tokio = { workspace = true, features = ["fs"] }
tracing.workspace = true
url.workspace = true
zeroize.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["macros"] }
