# This file is part of Astarte.
#
# Copyright 2025, 2026 SECO Mind Srl
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "astarte-fdo-protocol"
version.workspace = true
categories = ["embedded", "network-programming", "api-bindings", "parser-implementations"]
edition.workspace = true
homepage.workspace = true
keywords = ["fido", "fdo", "astarte", "iot"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
description = "FIDO Device Onboarding message parsing library"

[dependencies]
ciborium.workspace = true
coset = { workspace = true, features = ["std"] }
once_cell.workspace = true
rustc-hash.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_bytes.workspace = true
tracing = { workspace = true, optional = true }
tracing-subscriber.workspace = true
x509-parser.workspace = true

[features]
default = ["tracing"]
tracing = ["dep:tracing"]

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
tracing-subscriber.workspace = true
