# This file is part of Astarte.
#
# Copyright 2025 SECO Mind Srl
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "e2e-test"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true

[features]
default = ["platform-tls"]
# Uses the TPM for cryptography
tpm = ["astarte-device-fdo/tpm"]
# Use the Platform Verifier for TLS
platform-tls = ["dep:rustls-platform-verifier"]
# Use an embedded CA chain for TLS
webpki-roots = ["dep:webpki-roots"]

[dependencies]
astarte-device-fdo.workspace = true
cfg-if.workspace = true
clap = { workspace = true, features = ["derive"] }
color-eyre.workspace = true
eyre.workspace = true
rustls.workspace = true
rustls-platform-verifier = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url.workspace = true
uuid = { workspace = true, features = ["v7"] }
webpki-roots = { workspace = true, optional = true }
